Fix for issue with flags on smaller screens.

--- a/src/app/components/app/header/header.css
+++ b/src/app/components/app/header/header.css
@@ -5,23 +5,24 @@ h1 {
   text-shadow: 0 0 5px currentColor;
 }
 
-/****/
+/** FLAG CONTAINER **/
 
-.topHeader {
+.flagWrapper {
+  display: block; /* Ensure container with flags is always in top right corner.*/
   position: fixed;
   top: 0;
   right: 0;
 
-  overflow-y: auto; /* Scrollable if content is long */
-  z-index: 100; /* Ensure it's above other content */
+  overflow-y: auto;
+  z-index: 100;
 }
 
-/* Non-desktops. */
-
 @media (max-width: 700px) {
-  .topHeader {
+  .flagWrapper {
+    display: flex; /* Ensure container with flags is centered in top middle of viewport. */
     position: static;
-    margin: auto;
+    justify-content: center;
+    width: 100%;
   }
 }
 
